# router/router.go
@@ -13,5 +13,6 @@ func TodoRouters(router *gin.Engine) {
 	router.GET("/todos/:id", controllers.GetAllTodosByID)
 	router.POST("/todos", controllers.CreateTodo)
 	router.PUT("/todos/update/:id", controllers.UpdateTodo)
+	router.DELETE("/todos/delete/:id", controllers.DeleteTodo)
 	router.GET("/docs/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 }
